syntax = "proto3";

package common;

option go_package = "neighbourhood/proto/gen/go/common";

import "google/protobuf/timestamp.proto";

// Common types used across all services

message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
  int32 total_count = 3;
  int32 total_pages = 4;
}

message Metadata {
  string request_id = 1;
  string user_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> headers = 4;
}

message Status {
  bool success = 1;
  string message = 2;
  Error error = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
  string version = 2;
  google.protobuf.Timestamp uptime = 3;
  map<string, string> dependencies = 4;
}
